--- a/estilo_projeto.css
+++ b/estilo_projeto.css
@@ -4,6 +4,17 @@
 body{
     text-align: center;
 }
+.custom-button {
+  padding: 10px 40px; /* Espaçamento interno */
+  background-color: #f5f8f9; /* Cor de fundo azul */
+  color: #080808; /* Cor do texto branco */
+  border: 2px solid #040404; /* Borda sólida azul */
+  border-radius: 5px; /* Borda arredondada */
+  cursor: pointer; /* Cursor de seta ao passar por cima */
+  transition: background-color 0.3s, color 0.3s; /* Transição suave */
+}
+
+
 .container {
     display: flex;
     justify-content: center; /* Centralizar horizontalmente */
@@ -12,8 +23,8 @@ body{
 }
 
 img {
-    max-width: 150%; /* Garante que a imagem não ultrapasse a largura máxima do seu contêiner */
-    max-height: 150%; /* Garante que a imagem não ultrapasse a altura máxima do seu contêiner */
+    max-width: 165%; /* Garante que a imagem não ultrapasse a largura máxima do seu contêiner */
+    max-height: 165%; /* Garante que a imagem não ultrapasse a altura máxima do seu contêiner */
 }
 /*
 footer para o Copyrigth
@@ -30,7 +41,7 @@ footer {
 }
 
 h1{
-  background-color: green;
+  background-color: rgb(5, 5, 5);
 }
 
 /* Defina o estilo para pores a letra toda em branca 
@@ -38,11 +49,11 @@ h1{
 h1 {
   color: white;
   text-align: center;
-  padding: 5px;
 }
 h2 {
     color: white;
     text-align: center;
+    margin-left: 50px;
     padding: 5px;
   }
   
