--- a/estilo_sign_up.css
+++ b/estilo_sign_up.css
@@ -1,8 +1,12 @@
 h1{
-    text-align: left;
+    
+    margin-left: 200px;
+    padding: 5px;
+  
 }
 h2{
-    text-align: center;
+  margin-left: 200px;
+  padding: 5px;
 
 }
 /*
