--- a/estilo_sign_up.css
+++ b/estilo_sign_up.css
@@ -1,5 +1,5 @@
 h1{
-    
+  font-size: 36px; /* Tamanho do texto em pixels */
     margin-left: 200px;
     padding: 5px;
   
@@ -14,7 +14,7 @@ footer para o Copyrigth
 */
 footer {
     color: #141313; /* Cor do texto no rodapé */
-    padding: 20px; /* Espaçamento interno do rodapé */
+    padding: 1px; /* Espaçamento interno do rodapé */
     text-align: left; /* Alinhar o texto à esquerda no rodapé */
     position: fixed; /* Fixar o rodapé na parte inferior da janela */
     left: 0;
@@ -22,22 +22,12 @@ footer {
     width: 100%; /* Largura total */
     background-color: #f0f0f0; /* Cor de fundo do rodapé */
   }
-  .caixa-cinza {
+.caixa-cinza {
     background-color: #cccccc; /* Define a cor de fundo como cinza */
     padding: 20px; /* Adiciona um espaçamento interno de 20 pixels */
     border-radius: 5px; /* Adiciona cantos arredondados */
 }
-.quadradinho {
-    width: 50px;
-    height: 50px;
-    background-color: white;
-    border: 1px solid #999;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    cursor: pointer;
-  }
+
 
   .botao.selected {
     background-color: #ccc;
@@ -45,4 +35,13 @@ footer {
 
   .botao.selected::after {
     content: '\00D7';
+  }
+  .custom-button {
+    padding: 10px 40px; /* Espaçamento interno */
+    background-color: #f5f8f9; /* Cor de fundo azul */
+    color: #080808; /* Cor do texto branco */
+    border: 2px solid #040404; /* Borda sólida azul */
+    border-radius: 5px; /* Borda arredondada */
+    cursor: pointer; /* Cursor de seta ao passar por cima */
+    transition: background-color 0.3s, color 0.3s; /* Transição suave */
   }
