--- a/styles/index.css
+++ b/styles/index.css
@@ -1,58 +1,68 @@
-/* estilo.css */
-
-/* Defina o estilo para o corpo do documento meuDia.html */
-body{
-    text-align: center;
-}
-.custom-button {
-  padding: 10px 40px; /* Espaçamento interno */
-  background-color: #f5f8f9; /* Cor de fundo azul */
-  color: #080808; /* Cor do texto branco */
-  border: 2px solid #040404; /* Borda sólida azul */
-  border-radius: 5px; /* Borda arredondada */
-  cursor: pointer; /* Cursor de seta ao passar por cima */
-  transition: background-color 0.3s, color 0.3s; /* Transição suave */
-}
-.container {
-    display: flex;
-    justify-content: center; /* Centralizar horizontalmente */
-    align-items: center; /* Centralizar verticalmente */
-    height: 200; /* Define a altura para ocupar toda a altura da viewport */
+/*
+Style for h1
+*/
+h1 {
+  color: rgb(24, 23, 23);
+  text-align: center;
+  padding: 5px;
+  font-family: "Times New Roman", Times, serif;
 }
 
-img {
-    max-width: 165%; /* Garante que a imagem não ultrapasse a largura máxima do seu contêiner */
-    max-height: 165%; /* Garante que a imagem não ultrapasse a altura máxima do seu contêiner */
+h2 {
+  color: rgb(24, 23, 23);
+  text-align: center;
+  padding: 5px;
+  font-family: "Times New Roman", Times, serif;
 }
 /*
-footer para o Copyrigth
+Style for img
+*/
+img {
+  max-width: 165%; 
+  max-height: 165%;
+  margin: 0 auto;
+  display: block;
+
+}
+/*
+Style for the btn
+*/
+.btn{
+  padding: 10px 10px; 
+  margin: 10px; 
+}
+/*
+Style for container
+*/
+.table-container {
+  margin: 0 auto; 
+  max-width: 1050px; 
+}
+/*
+Style for the table
+*/
+table {
+  border-collapse: collapse;
+  width: 100%; 
+  color: white; 
+  font-size: 20px; 
+  text-align: center; 
+
+}
+
+/*
+footer Copyrigth
 */
 footer {
-  color: #141313; /* Cor do texto no rodapé */
-  padding: 1px; /* Espaçamento interno do rodapé */
-  text-align: left; /* Alinhar o texto à esquerda no rodapé */
-  position: fixed; /* Fixar o rodapé na parte inferior da janela */
+  color: #141313; 
+  padding: 1px; 
+  text-align: left; 
+  position: fixed; 
   left: 0;
   bottom: 0;
-  width: 100%; /* Largura total */
-  background-color: #f0f0f0; /* Cor de fundo do rodapé */
+  width: 100%; 
+  background-color: #f0f0f0; 
 }
-
-h1{
-  background-color: rgb(255, 255, 255);
-}
-
-/* Defina o estilo para pores a letra toda em branca 
- */
-h1 {
-  font-size: 40px; /* Tamanho do texto em pixels */
-  color: white;
-  text-align: center;
-}
-h2 {
-    color: white;
-    text-align: center;
-    margin-left: 50px;
-    padding: 5px;
-  }
-  
+/*
+Style for the alert
+*/
